--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
         <!-- ===== ABOUT SECTION ===== -->
         <section id="about" class="about">
             <div class="container">
-                <h2 class="section-title">About Me</h2>
+                <h2 class="section-title">about me</h2>
                 <div class="about-content">
-                    <p class="about-text">I am a developer passionate about learning red teaming and cybersecurity. I focus on understanding offensive security techniques, mastering tools like Metasploit, Burp Suite, and Wireshark, while building robust applications. My journey involves continuous learning in ethical hacking, vulnerability assessment, and secure coding practices.</p>
+                    <p class="about-text">i am a developer passionate about learning red teaming and cybersecurity. i focus on understanding offensive security techniques, mastering tools like metasploit, burp suite, and wireshark, while building robust applications. my journey involves continuous learning in ethical hacking, vulnerability assessment, and secure coding practices.</p>
                     
                     <div class="about-focus">
-                        <h3 class="focus-title">Focus Areas</h3>
+                        <h3 class="focus-title">focus areas</h3>
                         <div class="focus-grid">
                             <div class="focus-item">
                                 <i class="bi bi-shield-check"></i>
-                                <span>Penetration Testing</span>
+                                <span>penetration testing</span>
                             </div>
                             <div class="focus-item">
                                 <i class="bi bi-code"></i>
-                                <span>Secure Coding</span>
+                                <span>secure coding</span>
                             </div>
                             <div class="focus-item">
                                 <i class="bi bi-bug"></i>
-                                <span>Vulnerability Analysis</span>
+                                <span>vulnerability analysis</span>
                             </div>
                             <div class="focus-item">
                                 <i class="bi bi-diagram-3"></i>
-                                <span>Network Security</span>
+                                <span>network security</span>
                             </div>
                         </div>
                     </div>
@@ -70,16 +70,16 @@
         <!-- ===== SKILLS SECTION ===== -->
         <section id="projects" class="skills-showcase">
             <div class="container">
-                <h2 class="section-title">Skills</h2>
+                <h2 class="section-title">skills</h2>
                 <div class="skills-showcase-grid">
-                    <div class="skill-badge">Python</div>
-                    <div class="skill-badge">Burp Suite</div>
-                    <div class="skill-badge">Metasploit</div>
-                    <div class="skill-badge">Wireshark</div>
-                    <div class="skill-badge">Nmap</div>
-                    <div class="skill-badge">Hydra</div>
-                    <div class="skill-badge">SQLMap</div>
-                    <div class="skill-badge">Aircrack-ng</div>
+                    <div class="skill-badge">python</div>
+                    <div class="skill-badge">burp suite</div>
+                    <div class="skill-badge">metasploit</div>
+                    <div class="skill-badge">wireshark</div>
+                    <div class="skill-badge">nmap</div>
+                    <div class="skill-badge">hydra</div>
+                    <div class="skill-badge">sqlmap</div>
+                    <div class="skill-badge">aircrack-ng</div>
                 </div>
             </div>
         </section>
@@ -89,24 +89,24 @@
         <section id="newsletter" class="newsletter">
             <div class="container">
                 <div class="newsletter-content">
-                    <h2 class="section-title">Stay Updated</h2>
-                    <p class="newsletter-subtitle">Subscribe to my email list to get the latest updates</p>
+                    <h2 class="section-title">stay updated</h2>
+                    <p class="newsletter-subtitle">subscribe to my email list to get the latest updates</p>
                     <form class="newsletter-form" id="newsletter-form">
                         <div class="form-group">
                             <input 
                                 type="email" 
                                 class="email-input" 
-                                placeholder="Enter your email" 
+                                placeholder="enter your email" 
                                 required
                             >
-                            <button type="submit" class="btn subscribe-btn">Subscribe</button>
+                            <button type="submit" class="btn subscribe-btn">subscribe</button>
                         </div>
                     </form>
                 </div>
             </div>
         </section>
 
-        <p class="footer-quote">Depth over breadth. Master Burp Suite and Python deeply rather than superficially <br> knowing 50 tools.. <a href="https://x.com" target="_blank" title="Follow on X">@whitehats</a></p>
+        <p class="footer-quote">depth over breadth. master burp suite and python deeply rather than superficially <br> knowing 50 tools.. <a href="https://x.com" target="_blank" title="Follow on X">@whitehats</a></p>
 
     </main>
 
