Major changes - updated html and css files

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
         </section>
 
-        <p class="footer-quote">depth over breadth. master burp suite and python deeply rather than superficially <br> knowing 50 tools.. <a href="https://x.com" target="_blank" title="Follow on X">@whitehats</a></p>
+        <p class="footer-quote">master burp suite and python deeply rather than superficially knowing 50 tools.. <a href="https://x.com" target="_blank" title="Follow on X">@whitehats</a></p>
 
     </main>
 
