--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- ===== ABOUT SECTION ===== -->
         <section id="about" class="about">
             <div class="container">
-                <h2 class="section-title">about me</h2>
+                <h2 class="section-title">about</h2>
                 <div class="about-content">
                     <p class="about-text">i am a developer passionate about learning red teaming and cybersecurity. i focus on understanding offensive security techniques, mastering tools like metasploit, burp suite, and wireshark, while building robust applications. my journey involves continuous learning in ethical hacking, vulnerability assessment, and secure coding practices.</p>
                     
@@ -70,7 +70,7 @@
         <!-- ===== SKILLS SECTION ===== -->
         <section id="projects" class="skills-showcase">
             <div class="container">
-                <h2 class="section-title">skills</h2>
+                <h2 class="section-title">tools</h2>
                 <div class="skills-showcase-grid">
                     <div class="skill-badge">python</div>
                     <div class="skill-badge">burp suite</div>
@@ -89,7 +89,7 @@
         <section id="newsletter" class="newsletter">
             <div class="container">
                 <div class="newsletter-content">
-                    <h2 class="section-title">stay updated</h2>
+                    <h2 class="section-title">subscribe</h2>
                     <p class="newsletter-subtitle">subscribe to my email list to get the latest updates</p>
                     <form class="newsletter-form" id="newsletter-form">
                         <div class="form-group">
@@ -106,7 +106,7 @@
             </div>
         </section>
 
-        <p class="footer-quote">master burp suite and python deeply rather than superficially knowing 50 tools.. <a href="https://x.com" target="_blank" title="Follow on X">@whitehats</a></p>
+        <p class="footer-quote">depth over breadth. master burp suite and python deeply rather than superficially <br> knowing 50 tools.. <a href="https://x.com" target="_blank" title="Follow on X">@whitehats</a></p>
 
     </main>
 
